replaced isBlank method calls with trim and isEmpty